[package]
name = "automerge-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.4.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
smartstring = { version = "1.0.1", features = ["serde"] }
smallvec = { version = "1.10.0", features = ["serde"] }
criterion = { version = "0.4.0", features = ["html_reports"] }